welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: ';' expected but '{' found.
   	 	while(couleur == Color.green){
                                             ^