welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = blanc
    do {
    	avance()
    }
   	 	while(couleur == Color.green){
    		}
    		avance()
    		couleur = getCouleurSol()
    		if(estFaceMur){
    	return
    }
        return couleur
}        
